objects/FundingOpportunity.object
<CustomObject>
    <fields>
        <fullName>Funding_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Opportunities</relationshipLabel>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDOAnnouncement_Date__c</fullName>
        <label>Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDOApplication_Due_Date__c</fullName>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDOAward_Decision_Date__c</fullName>
        <label>Award Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDOCFDA_Number__c</fullName>
        <label>CFDA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDOExpected_Number_of_Awards__c</fullName>
        <label>Expected Number of Awards</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDOFunding_Opportunity_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDOFunding_Opportunity_Number__c</fullName>
        <displayFormat>gotf-{000000}</displayFormat>
        <label>Funding Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IDOGrant_Type__c</fullName>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Directed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDONOFO_Submitted__c</fullName>
        <label>NOFO Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDOTotal_Program_Amount__c</fullName>
        <label>Total Program Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDOTotal_Reserve_Amount__c</fullName>
        <label>Total Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Public_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Funding Opportunity is available to the public. If unchecked, the opportunity will only be visible to those users you choose to share it with.</inlineHelpText>
        <label>Public Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gps_Accepting_Applications__c</fullName>
        <label>Accepting Applications</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gps_Application_Process__c</fullName>
        <label>Application Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gps_Funding_Eligibility__c</fullName>
        <label>Funding Eligibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All_FundingOpportunities</fullName>
        <columns>Name</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <columns>BudgetTemplate</columns>
        <columns>Program</columns>
        <columns>Status</columns>
        <columns>Public_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Funding Opportunities</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>